# ranking-fatec

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  boot.sh  docker-compose.yml  pyproject.toml  test_modelos.py
ranking_fatec/: cli.py  core.py  dados.py  db.py  main.py  models.py  routes.py
ranking_fatec/alembic/: env.py
ranking_fatec/alembic/versions/: 2b1368b5264a_adiciona_probabilidade.py  d5c4a5a0a8dc_nota_enem_optativa.py  e57552ee9425_criando_estrutura_inicial_do_ranking.py
templates/: index.html
