[tool.poetry]
name = "ranking-fatec"
version = "0.1.0"
description = ""
authors = ["Wesley Francisco de Lima <wesleyfralima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.138.1"}
uvicorn = "^0.49.0"
pydantic = "^2.13.4"
sqlalchemy = "^2.0.51"
alembic = "^1.18.5"

[tool.poetry.scripts]
popular-banco = "ranking_fatec.cli:popular_banco"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
ruff = "^0.15.20"
mypy = "^2.1.0"
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
coverage = "^7.14.3"
pre-commit = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


## Black
[tool.black]
line-length = 88
target-version = ["py312"]

## Ruff
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

## Mypy
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true

## Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
